--- a/css/style.css
+++ b/css/style.css
@@ -125,9 +125,13 @@ img {
 .card button:not(.btn-comprar) {
   padding: 0;
   border: none;
-  background-color: #F5F5F5;
+  background-color: var(--coral);
   border: 1px solid #ccc;
   border-radius: 14px;
+}
+
+.btn-comprar:hover {
+  background-color: #D97706;
 }
 
 .descricao {
