--- a/css/style.css
+++ b/css/style.css
@@ -171,8 +171,8 @@ img {
   top: 12px;
   left: 12px;
 
-  background-color: #e8f4f8;
-  color: #0a6fa1;
+  background-color: #F59E0B;
+  color: #fff;
 
   font-size: 0.8rem;
   font-weight: 600;
