--- a/css/style.css
+++ b/css/style.css
@@ -1424,10 +1424,10 @@ a.btn-comprar {
     gap: 32px;
   }
 
-  .institucional-ebwu .institucional-imagem img {
+  .institucional-imagem img {
     background: transparent;
     padding: 0;
-    border-radius: 12px;
+    border-radius: 5px;
     width: 100%;
     max-width: 100%;
   }
