--- a/css/style.css
+++ b/css/style.css
@@ -1604,7 +1604,7 @@ a.btn-comprar {
    ====================================================== */
 
 .depoimentos {
-  background: linear-gradient(180deg, #071d33, #04101f);
+  background: linear-gradient(180deg, #0A2540 0%, #081c33 100%);
 }
 
 .depoimentos-slider {
@@ -1725,7 +1725,7 @@ a.btn-comprar {
    ====================================================== */
 
 .igc-videos {
-  background: linear-gradient(180deg, #071d33, #04101f);
+  background: linear-gradient(180deg, #0A2540 0%, #081c33 100%);
 }
 
 .igc-videos-slider {
